--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<title>Simon Says - JavaScript</title>
 	<link rel="stylesheet" href="css/style.css" />
 	<script data-main="js/main" src="js/lib/require.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<a href="https://github.com/kellyk/javascript-simon"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 	<div class="wrapper">
-		<h1>Simon Says</h1>
+		<h1>Cansu Says</h1>
+		<p>Wellcome petarda! You have to get to the lvl 10 to unlock ur price! heh Enjoy!!</p>
+		<p>* Do not disable the alerts or u won't see ur price heh</p>
 			<div class="game-board">
 				<div class="simon">
 					<ul>
@@ -26,28 +28,7 @@
 				<button data-action="start" >Start</button>
 				<p data-action="lose">Sorry, you lost after <span data-round="0"></span> rounds!</p>
 			</div>
-			<div class="game-options">
-				<h2>Game Options:</h2>
-				<input type="radio" name="mode" value="normal" checked>Normal<br>
-				<input type="radio" name="mode" value="sound-only">Sound Only<br>
-				<input type="radio" name="mode" value="light-only">Light Only<br>
-				<input type="radio" name="mode" value="free-board">Free board
-			</div>
 		<div data-action="sound"></div>
-		<footer>
-			Created by <a href="http://kellyking.me">Kelly King</a>
-		</footer>
 	</div>
-	
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-37765307-2', 'kellyking.me');
-	  ga('send', 'pageview');
-
-	</script>
 </body>
 </html>
